<resources>
    <string name="gender_str">Gender</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="app_name">Tabowa App Demo</string>
    <string name="action_add_subject">Add Course</string>
    <string name="course_code">Course Code: %d</string>
    <string name="course_credit">Course Credit: %.2f</string>
    <string name="title_activity_subjects">Course List</string>
    <string name="no_data_found">No data found in database!</string>
    <string name="student_count">Number of Student: %d</string>
    <string name="subject_count">Number of Course: %d</string>
    <string name="taken_subject_count">Number of Taken Course: %d</string>
    <string name="delete_button_description">This icon is responsible for delete the resource</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_subject">CreateCourseActivity</string>
    <string name="registration_no">Registration No</string>
    <string name="email">Email</string>
    <string name="department">Department</string>
    <string name="school">School</string>
    <string name="photo">Photo</string>
    <string name="program">Program</string>
    <string name="category">Category</string>
    <string name="session">Session</string>
    <string name="blood_group">Blood Group</string>
    <string name="nok">Next of Kin</string>
    <string name="nok_addr">NOK Address</string>
    <string name="nok_phone">NOK Photo</string>
    <string-array name="state">
        <item>	State	</item>
        <item>	Abia	</item>
        <item>	Adamawa	</item>
        <item>	Akwa Ibom	</item>
        <item>	Anambra	</item>
        <item>	Bauchi	</item>
        <item>	Bayelsa	</item>
        <item>	Benue	</item>
        <item>	Borno	</item>
        <item>	Cross River	</item>
        <item>	Delta	</item>
        <item>	Ebonyi	</item>
        <item>	Edo	</item>
        <item>	Ekiti	</item>
        <item>	Enugu	</item>
        <item>	Fct-Abuja	</item>
        <item>	Gombe	</item>
        <item>	Imo	</item>
        <item>	Jigawa	</item>
        <item>	Kaduna	</item>
        <item>	Kano	</item>
        <item>	Katsina	</item>
        <item>	Kebbi	</item>
        <item>	Kogi	</item>
        <item>	Kwara	</item>
        <item>	Lagos	</item>
        <item>	Nassarawa	</item>
        <item>	Niger	</item>
        <item>	Ogun	</item>
        <item>	Ondo	</item>
        <item>	Osun	</item>
        <item>	Oyo	</item>
        <item>	Plateau	</item>
        <item>	Rivers	</item>
        <item>	Sokoto	</item>
        <item>	Taraba	</item>
        <item>	Yobe	</item>
        <item>	Zamfara	</item>
    </string-array>
    <string name="cancel_button">Cancel</string>
    <string name="create_button">Create</string>
    <string name="update_button">Update</string>
    <string name="tab_fees">FEES</string>
    <string name="tab_courses">COURSES</string>
    <string name="tab_info">INFO</string>
    <string name="course_reg_number">Registration number</string>
    <string name="course_title">Course title</string>
    <string name="grade_program">Program</string>
    <string name="grade_category">Category</string>
    <string name="grade_session">Session</string>
    <string name="grade_units">Units</string>
    <string name="grade_class_attendance">Class attendance</string>
    <string name="grade_score">Score</string>
    <string name="grade_examination">Examination</string>
    <string name="grade_total">Total</string>
    <string name="grade_grade">Grade</string>
    <string name="attendance_semester">Semester</string>
    <string name="attendance_date_attendance">Date of attendace</string>
</resources>