<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <!--        <ImageView-->
        <!--            android:id="@+id/studentimageView"-->
        <!--            android:layout_width="100dp"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:src="@drawable/user"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:contentDescription="@string/cross_image_content_description"-->
        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
        <!--            app:layout_constraintRight_toRightOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeRegNoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/TextLabel"
            app:layout_constraintTop_toTopOf="parent"
            >

            <EditText
                android:id="@+id/gradeRegNoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_reg_number"
                android:inputType="text"
                android:layout_marginTop="0dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeProgramLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeRegNoLayout">
            <EditText
                android:id="@+id/gradeProgramEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_program"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeCategoryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeProgramLayout">

            <EditText
                android:id="@+id/gradeCategoryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_category"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeSessionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeCategoryLayout">

            <EditText
                android:id="@+id/gradeSessionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_session"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeSemesterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeSessionLayout">

            <EditText
                android:id="@+id/gradeSemesterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/attendance_semester"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeSemesterLayout">

            <EditText
                android:id="@+id/gradeTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_title"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeTitleLayout">
            <EditText
                android:id="@+id/gradeCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_code"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeClassAttendanceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeCodeLayout">
            <EditText
                android:id="@+id/gradeClassAttendanceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_class_attendance"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeScoreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeClassAttendanceLayout">
            <EditText
                android:id="@+id/gradeScoreEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_score"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeExaminationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeScoreLayout">
            <EditText
                android:id="@+id/gradeExaminationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_examination"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeTotalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeExaminationLayout">
            <EditText
                android:id="@+id/gradeTotalEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_total"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeGradeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeTotalLayout">
            <EditText
                android:id="@+id/gradeGradeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_grade"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gradeUnitsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeGradeLayout">
            <EditText
                android:id="@+id/gradeUnitsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_units"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/cancelButton"
            app:layout_constraintTop_toBottomOf="@+id/gradeUnitsLayout"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            app:layout_constraintLeft_toRightOf="@+id/createButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeUnitsLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>