<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <!--        <ImageView-->
        <!--            android:id="@+id/studentimageView"-->
        <!--            android:layout_width="100dp"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:src="@drawable/user"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:contentDescription="@string/cross_image_content_description"-->
        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
        <!--            app:layout_constraintRight_toRightOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/attendanceRegNoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/TextLabel"
            app:layout_constraintTop_toTopOf="parent"
            >

            <EditText
                android:id="@+id/attendanceRegNoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_reg_number"
                android:inputType="text"
                android:layout_marginTop="0dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/attendanceProgramLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendanceRegNoLayout">
            <EditText
                android:id="@+id/attendanceProgramEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_program"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/attendanceCategoryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendanceProgramLayout">

            <EditText
                android:id="@+id/attendanceCategoryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_category"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/attendanceSessionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendanceCategoryLayout">

            <EditText
                android:id="@+id/attendanceSessionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_session"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/attendanceSemesterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendanceSessionLayout">

            <EditText
                android:id="@+id/attendanceSemesterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/attendance_semester"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/attendanceTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendanceSemesterLayout">

            <EditText
                android:id="@+id/attendanceTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_title"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/attendanceCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendanceTitleLayout">
            <EditText
                android:id="@+id/attendanceCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_code"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/attendanceClassAttendanceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendanceCodeLayout">
            <EditText
                android:id="@+id/attendanceClassAttendanceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade_class_attendance"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/attendanceDateofAttendanceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendanceClassAttendanceLayout">
            <EditText
                android:id="@+id/attendanceDateofAttendanceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/attendance_date_attendance"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/createButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/cancelButton"
            app:layout_constraintTop_toBottomOf="@+id/attendanceDateofAttendanceLayout"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            app:layout_constraintLeft_toRightOf="@+id/createButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendanceDateofAttendanceLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>